# ncc-presencas

./: .env.exemple  .env_exemplo  .gitignore  LICENSE  README.md  config.py  database.py  index.html  login.html  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  schemas.py  security.py  utils.py  vercel.json
app/: __ini__.py  config.py  database.py  main.py  models.py  schemas.py  security.py
app/routers/: __init__.py  auth.py  people.py  person.py  presence.py
database/: ncc.db  people.db
local_db/: ncc.db
routers/: auth.py  person.py  presence.py
static/css/: dialog.css  report.css  style.css
static/icons/: icon-ncc.xcf
static/js/: auth.js  client-side-templates.min.js  exemple.js  login.js  main.js  manifest.json  oauth.js  report.js  service-worker.js  table.js  table2.js
static/pages/: index.html  login.html  report.html
