[project]
name = "ncc-presenca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.119.0",
    "passlib>=1.7.4",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-libsql>=0.2.0",
    "uvicorn>=0.37.0",
]
